[ADD] DB setting

--- a/content/5.Project/AWS HW monitoring/4. Publisher.md
+++ b/content/5.Project/AWS HW monitoring/4. Publisher.md
@@ -56,7 +56,7 @@ b"hello" -> hello
 
 구현한 데이터 객체를 하나 보게 되면 아래와 같다.
 ```java
-public class TopProcessDetail {  
+public class TopProcessDetail implements Serializable{  
     /*  
     ***** Important *****    FOR USE JSON DAO MUST TAKE DEFAULT CONSTRUCTOR    ***** Important *****    */    private int PID;  
     private String COMMAND;  
@@ -129,4 +129,4 @@ properties.put(JsonSerializer.ADD_TYPE_INFO_HEADERS, {Object class}.class.getNam
 ![[4. Publisher-4.png]]
 
 최근에 MQTT 프로젝트를 공부하면서 influxdb와 그라파나의 유용성을 한번 경험해 봤다.  한번 해보자!!!
--> 다음에서 계속
+-> 다음에서 계속 [[5. Database & logger]]
