--- a/content/5.Project/AWS HW monitoring/1. Overview&IDEA.md
+++ b/content/5.Project/AWS HW monitoring/1. Overview&IDEA.md
@@ -1,3 +1,12 @@
+링크
+[[1. Overview&IDEA]]
+[[2. Problem &  PoC]]
+[[3. DATA Design]]
+[[4. Publisher]]
+[[5. Database & logger]]
+[[6. Visualization]]
+[[7. ToBeContinue...?]]
+
 ### Overview
 
 #### 내가생각하는 Data Engineering
