--- a/content/5.Project/AWS HW monitoring/3. DATA Design.md
+++ b/content/5.Project/AWS HW monitoring/3. DATA Design.md
@@ -1,3 +1,11 @@
+링크
+[[1. Overview&IDEA]]
+[[2. Problem &  PoC]]
+[[3. DATA Design]]
+[[4. Publisher]]
+[[5. Database & logger]]
+[[6. Visualization]]
+[[7. ToBeContinue...?]]
 #### Continue
 
 우선 이전에는 MAC에서 본것이지만 ubuntu화면에서 
@@ -13,67 +21,71 @@ top
 코드는 크게 2가지 부분으로 나눠져 있다.
 * #### top process를 실행시키고 1초마다 출력하게 하면서 cpu, memory, process의 정보를 가져온다.
 ```java
-// TOP COMMAND HANDLER  
-   try {  
-	  // 현재 top프로세스를 터미널에서 강제 실행
-      lineNumber = 0;  
-      p = Runtime.getRuntime().exec("top -b -n 1");  
-      BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream()));  
-
-	// 처음 2줄은 빈 값으로 나오는 경우가 있어서 예외처리
-      while ((temp = br.readLine()) != null) {  
-         if (lineNumber < 2) {  
-            lineNumber++;  
-            continue;         
+try {  
+  
+            lineNumber = 0;  
+            p = Runtime.getRuntime().exec("top -b -n 1");  
+            BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream()));  
+  
+            while ((temp = br.readLine()) != null) {  
+               if (lineNumber < 2) {  
+                  lineNumber++;  
+                  continue;               }  
+  
+  
+               String[] temp_str = temp.split("\\s+");  
+  
+               // PARSING  
+               if (lineNumber == 2) { // parsing CPU  
+                  System.out.println(Arrays.toString(temp_str));  
+                  if (containsString(List.of(temp_str),"100")) {  
+                     lineNumber++;  
+                     continue;                  }  
+                  cpuDetail = new TotalCpuDetail(Float.parseFloat(temp_str[1]), Float.parseFloat(temp_str[3]));  
+//                System.out.println(Arrays.toString(temp_str));  
+//                System.out.println(cpuDetail.toString());  
+  
+               } else if (lineNumber == 3) { // parsing PhysMem  
+                  memDetail = new TotalMemDetail(Float.parseFloat(temp_str[7]), Float.parseFloat(temp_str[5]));  
+  
+               } else if (lineNumber > 6) { // parsing ProcessDetail;  
+                  if (Float.parseFloat(temp_str[9]) >= 1.0 ) {  
+                     TopProcessDetail topProcessDetail = new TopProcessDetail(Integer.parseInt(temp_str[1]), temp_str[12], Float.parseFloat(temp_str[9]), temp_str[11], Float.parseFloat(temp_str[10]), temp_str[8]);  
+                     topRateProcess.add(topProcessDetail);  
+                  }  
+                    
+               }  
+  
+               lineNumber++;  
+  
             }  
   
-	  // 공백문자를 기준으로 parsing
-         String[] temp_str = temp.split("\\s+");  
-  
-         // PARSING  
-         if (lineNumber == 2) { // parsing CPU  
-            System.out.println(Arrays.toString(temp_str));  
-            cpuDetail = new TotalCpuDetail(Float.parseFloat(temp_str[1]), Float.parseFloat(temp_str[3]));  
-            System.out.println(cpuDetail.toString());  
-  
-         } else if (lineNumber == 3) { // parsing PhysMem  
-            memDetail = new TotalMemDetail(Float.parseFloat(temp_str[7]), Float.parseFloat(temp_str[5]));  
-  
-         } else if (lineNumber > 6) { // parsing ProcessDetail;  
-            if (Float.parseFloat(temp_str[9]) >= 1.0 ) {  
-               TopProcessDetail topProcessDetail = new TopProcessDetail(Integer.parseInt(temp_str[1]), temp_str[12], Float.parseFloat(temp_str[9]), temp_str[11], Float.parseFloat(temp_str[10]), temp_str[8]);  
-               topRateProcess.add(topProcessDetail);  
-            }  
-              
-         }  
-         lineNumber++;  
-      }  
-  
-      p.waitFor();  
-      p.destroy();  
-   } catch (Exception e) {  
-      throw new RuntimeException(e);  
-   }  	
+            p.waitFor();  
+            p.destroy();  
+         } catch (Exception e) {  
+            throw new RuntimeException(e);  
+         }	
 ```
 * #### df라는 현재 디스크를 관리하는 창을 실행시키고 현재 disk정보를 가져오는 것이다. 
 ```java
 // DF COMMAND HANDLER FOR DISK INFO  
-   try {  
-      p = Runtime.getRuntime().exec("df -h");  
+try {  
+   p = Runtime.getRuntime().exec("df -h");  
   
-      BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream()));  
-      br.readLine(); // firstline like "Filesystem/Size/Used/Avail/Use%/Mounted on"  
-      String[] tempDisk = br.readLine().split("\\s+");  
+   BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream()));  
+   br.readLine(); // firstline like "Filesystem/Size/Used/Avail/Use%/Mounted on"  
+   String[] tempDisk = br.readLine().split("\\s+");  
   
-      String readDisk = tempDisk[2].substring(0, tempDisk[2].length()-1);  
-      String writeDisk = tempDisk[3].substring(0, tempDisk[3].length()-1);  
+   String readDisk = tempDisk[2].substring(0, tempDisk[2].length()-1);  
+   String writeDisk = tempDisk[3].substring(0, tempDisk[3].length()-1);  
   
-      diskDetail = new TotalDiskDetail(Float.parseFloat(readDisk), Float.parseFloat(writeDisk));  
+   diskDetail = new TotalDiskDetail(Float.parseFloat(readDisk), Float.parseFloat(writeDisk));  
   
-      p.waitFor();  
-      p.destroy();  
-   } catch (Exception e) {  
-      throw new RuntimeException(e);  
+   p.waitFor();  
+   p.destroy();  
+} catch (Exception e) {  
+   throw new RuntimeException(e);  
+} 
 ```
 
 #### DATA Design
