--- a/content/5.Project/AWS HW monitoring/3. DATA Design.md
+++ b/content/5.Project/AWS HW monitoring/3. DATA Design.md
@@ -120,7 +120,7 @@ java -jar {file}.jar
 아래와 같은 line들을 출력할 수 있다!
 ![[DATA Design-1.png]]
 
-![[DATA Design-3.png|center]]
+![[DATA Design-3.png|center|600]]
 
 여기까지 하는데 참 고생이 많았다!! 이제 producing할 정보를 잡아올 수 있게 된것이다.
 이제 KAFKA 세팅을 하고 이 정보들을 카프카에 넣는 과정 그리고 다시 시각화 하는 과정이 남았다!!!! 0.7/3정도 한거 같네!!!
