--- a/content/5.Project/AWS HW monitoring/4. Publisher.md
+++ b/content/5.Project/AWS HW monitoring/4. Publisher.md
@@ -174,10 +174,10 @@ public class HardWareUsageDAO implements Serializable
 보면 뭔가 싶지만 왼쪽 - 카프카, 중간 - producer, 오른쪽 - kafka console consumer이다.
 요런 상황까지 왔다면 이제 눈으로 봐야하지 않겠는가!!!!
 
-![[4. Publisher-3.png]]
+![[4. Publisher-3.png|600]]
 
 다만 문제는 이전에 종연이가 짠 ELK코드가 없다... 프로젝트를 제안한 사람으로써 문제가 많은 상황이지만 여기서 조질수는 없다...
-![[4. Publisher-4.png]]
+![[4. Publisher-4.png|600]]
 
 최근에 MQTT 프로젝트를 공부하면서 influxdb와 그라파나의 유용성을 한번 경험해 봤다.  한번 해보자!!!
 -> 다음에서 계속 [[5. Database & logger]]
