--- a/content/5.Project/AWS HW monitoring/5. Database & logger.md
+++ b/content/5.Project/AWS HW monitoring/5. Database & logger.md
@@ -179,7 +179,7 @@ json을 어떻게 변환할 건지에 대해서 이야기하는 것들인데 GJS
 ```
 
 중요한건 influxdb에는 measurment라는 key와 같은 역할을 하는 객체가 있는데 이를 설정해 주지 않으면 kafka-consumer로 기본설정을 하게 된다. 이렇게 되면 구분자가 사라지면서 이게 telegraf에서 온거든 kafka에서 온거든 다 똑같게 들어가므로 로그가 합쳐지게 되는 썩을 결과가 된다....
-![[5. Database & logger-8.png|center|500]]
+![[5. Database & logger-8.png|500]]
 해서 위에 3개의 url이 필요한 것이다. 
 내가 적용한 부분만 보면 아래와 같다.
 
