--- a/content/5.Project/AWS HW monitoring/6. Visualization.md
+++ b/content/5.Project/AWS HW monitoring/6. Visualization.md
@@ -7,7 +7,7 @@
 [[6. Visualization]]
 [[7. ToBeContinue...?]]
 다왔다!!!! 우어어어어어어!
-![[IMG/6. Visualization-6.png|center|500]]
+![[IMG/6. Visualization-6.png|600]]
 
 
 ### influxDB visualization
