--- a/content/5.Project/AWS HW monitoring/3. DATA Design.md
+++ b/content/5.Project/AWS HW monitoring/3. DATA Design.md
@@ -8,21 +8,18 @@
 [[7. ToBeContinue...?]]
 #### Continue
 
-우선 이전에는 MAC에서 본것이지만 ubuntu화면에서 
+우선 이전에는 MAC에서 본것이지만 ubuntu화면에서 명령어는 아래와 같은 프로그램을 보여준다.
 ```
 top
 ```
-명령어는 아래와 같은 프로그램을 보여준다.
 ![[DATA Design-2.png]]
 
 #### Parser
 
-그리고 이전에 코드[[2. Problem &  PoC]]를 실행시키면
-코드는 크게 2가지 부분으로 나눠져 있다.
+그리고 이전에 코드[[2. Problem &  PoC]]를 보게되면 코드는 크게 2가지 부분으로 나눠져 있다.
 * #### top process를 실행시키고 1초마다 출력하게 하면서 cpu, memory, process의 정보를 가져온다.
 ```java
 try {  
-  
             lineNumber = 0;  
             p = Runtime.getRuntime().exec("top -b -n 1");  
             BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream()));  
@@ -90,11 +87,11 @@ try {
 
 #### DATA Design
 
-여기서 조금 설명을 첨언해야하는 경우에는 데이터를 string으로 보내는게 아니라 객체로 만들어서 출력을 하게 했는데 구조는 다음과 같다
+여기서 조금 설명을 첨언해야하는 경우인데 데이터를 string으로 보내는게 아니라 객체로 만들어서 출력을 하게 했는데 구조는 다음과 같다
 ```
-HardWareUsageDAO
-       |
-TotalCpuDtail
+                 HardWareUsageDAO
+       /                 |             \
+TotalCpuDtail ... TotalMemDetail ...  TotalDiskDetail
 ```
 **처음에 이렇게 계획을 한 이유는 객체로 데이터들을 핸들링 하게 되면 추후 유지관리에 이점이 있을 것이라 생각을 해서 데이터구조를 내가 짜고 우찬이에게 git을 통해 넘겨주는 방식으로 진행을 했다.**
 하지만 돌아봐서 생각을 해보면 문제있는데 아래와 같다.
@@ -126,3 +123,4 @@ java -jar {file}.jar
 이제 KAFKA 세팅을 하고 이 정보들을 카프카에 넣는 과정 그리고 다시 시각화 하는 과정이 남았다!!!! 0.7/3정도 한거 같네!!!
 
 -> 다음에서 계속
+[[4. Publisher|다음으로]]
