--- a/content/5.Project/AWS HW monitoring/4. Publisher.md
+++ b/content/5.Project/AWS HW monitoring/4. Publisher.md
@@ -50,7 +50,7 @@ JsonSerializer.ADD_TYPE_INFO_HEADERS, {Object class}.class.getName()
 ```
 ~~위코드를 통해서 JsonSerializer에서 해당 Object를 추론 할 수 있게 해줘야한다.
 
-~~잠깐의 프로젝트 코딩의 경험으로 Serializer에 대해서 생각해보면 각 객체 혹은 text(string)을 byte로 바꾼 뒤 필요한 작업을 하고 다시 역으로 객체 혹은 text(string)으로 바꿔서 데이터의 교환을 원활하게 해주는 역할을한다.~~
+잠깐의 프로젝트 코딩의 경험으로 Serializer에 대해서 생각해보면 각 객체 혹은 text(string)을 byte로 바꾼 뒤 필요한 작업을 하고 다시 역으로 객체 혹은 text(string)으로 바꿔서 데이터의 교환을 원활하게 해주는 역할을한다.
 ```
 Object -> 직렬화 -> byte
 "hello" -> b"hello"
@@ -95,7 +95,6 @@ public class HardWareUsageDAO {
 3. **부모 객체 : x, 자식 객체 : Serializable -> 직렬화 불가능**
 
 결과적으로 부모객체에 Serializable이 없는데 하라고 했으니... 참... 부끄러운 코드였다...
-
 ```java
 public class TopProcessDetail implements Serializable{  
     /*  
