[FIX] unorder page

--- a/content/5.Project/AWS HW monitoring/4. Publisher.md
+++ b/content/5.Project/AWS HW monitoring/4. Publisher.md
@@ -1,4 +1,3 @@
-링크
 [[1. Overview&IDEA]]
 [[2. Problem &  PoC]]
 [[3. DATA Design]]
@@ -12,43 +11,42 @@
 코드는 생각보다 간단한데 아래와 같다.
 ```java
 final String TOPIC_NAME = "fooo";
-		String bootstrapServer = args[0] + ":9092";
-		System.out.println("bootstrap server : " + bootstrapServer);
+String bootstrapServer = args[0] + ":9092";
+System.out.println("bootstrap server : " + bootstrapServer);
 
 
-		Properties properties = new Properties();
-		properties.put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, bootstrapServer);
-		properties.put(ProducerConfig.KEY_SERIALIZER_CLASS_CONFIG, StringSerializer.class.getName());
-		KafkaProducer<String, HardWareUsageDAO> producer = new KafkaProducer<>(properties);
+Properties properties = new Properties();
+properties.put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, bootstrapServer);
+properties.put(ProducerConfig.KEY_SERIALIZER_CLASS_CONFIG, StringSerializer.class.getName());
+KafkaProducer<String, HardWareUsageDAO> producer = new KafkaProducer<>(properties);
 
 //### 하드웨어 리소스를 잡아오는 코드 ###
 
 hardWareUsageDAO.setCPU(cpuDetail).setDISK(diskDetail).setMEM(memDetail).setTopRateProcess((ArrayList<TopProcessDetail>) topRateProcess);
 
 
-			// sending kafka
-			ProducerRecord<String, HardWareUsageDAO> record = new ProducerRecord<String, HardWareUsageDAO>(TOPIC_NAME, hardWareUsageDAO);
-			try {
-				producer.send(record);
-				System.out.println(hardWareUsageDAO);
-				Thread.sleep(500);
-			} catch (Exception e) {
-				e.printStackTrace();
-			}
+// sending kafka
+ProducerRecord<String, HardWareUsageDAO> record = new ProducerRecord<String, HardWareUsageDAO>(TOPIC_NAME, hardWareUsageDAO);
+try {
+	producer.send(record);
+	System.out.println(hardWareUsageDAO);
+	Thread.sleep(500);
+} catch (Exception e) {
+	e.printStackTrace();
+	}
 ```
 
 
 #### Serializer
 
-~~보면 그렇게 어려운 상황은 아니다. 다만 주석에 적혀있듯이 Jsonserializer가 난관이었다.
-많은 예제들에서 단순히 text를 보내면서 "아 저렇게 하면 되는 구나"했고 이번 프로젝트에서는 뭔가 다른걸 해보려다가 많은 시간을 들였던 부분이었다. ~~자세한건 [[Java Serializable]]에서 확인하자.
+~~보면 그렇게 어려운 상황은 아니다. 다만 주석에 적혀있듯이 Jsonserializer가 난관이었다. 많은 예제들에서 단순히 text를 보내면서 "아 저렇게 하면 되는 구나"했고 이번 프로젝트에서는 뭔가 다른걸 해보려다가 많은 시간을 들였던 부분이었다.~~  자세한건 [[Java Serializable]]에서 확인하자.
 
 ```java
 잘 못된 코드
 JsonSerializer.ADD_TYPE_INFO_HEADERS, {Object class}.class.getName()
 잘 못된 코드
 ```
-~~위코드를 통해서 JsonSerializer에서 해당 Object를 추론 할 수 있게 해줘야한다.
+~~위코드를 통해서 JsonSerializer에서 해당 Object를 추론 할 수 있게 해줘야한다.~~
 
 잠깐의 프로젝트 코딩의 경험으로 Serializer에 대해서 생각해보면 각 객체 혹은 text(string)을 byte로 바꾼 뒤 필요한 작업을 하고 다시 역으로 객체 혹은 text(string)으로 바꿔서 데이터의 교환을 원활하게 해주는 역할을한다.
 ```
@@ -65,27 +63,32 @@ b"hello" -> hello
 ```java
 public class HardWareUsageDAO {  
   
-    /*  
-    TotalCpuDetail        CPU HardWare Total Usage        This is divided into [User, System]    TotalMemDetail        MEM HardWare Total Usage        This is divided into [Used, Unused]    TotalDiskDetail        Disk is HardWare Total Usage        This is divided into [Read, Write]    TopProcessDetail        This is COMMAND TOP result where ranked top 5        This is consist of [PID, COMMAND, CPUusag˜e, Time, Mem, State]    ***** Important *****    FOR USE JSON DAO MUST TAKE DEFAULT CONSTRUCTOR    ***** Important *****     */  
+/*  
+TotalCpuDetail CPU HardWare Total Usage  
+This is divided into [User, System]    
+TotalMemDetail        MEM HardWare Total Usage        
+This is divided into [Used, Unused]    TotalDiskDetail        
+Disk is HardWare Total Usage        This is divided into [Read, Write]    TopProcessDetail        This is COMMAND TOP result where ranked top 5       This is consist of [PID, COMMAND, CPUusag˜e, Time, Mem, State]    
+***** Important *****    FOR USE JSON DAO MUST TAKE DEFAULT CONSTRUCTOR    ***** Important *****     */  
+
   
-  
-    private String EC2Number;  
-    private TotalCpuDetail CPU;  
-    private TotalMemDetail MEM;  
-    private TotalDiskDetail DISK;  
-    private List<TopProcessDetail> TopRateProcess;  
-  
-    public HardWareUsageDAO() {  
-        this.TopRateProcess = new ArrayList<TopProcessDetail>();  
-    }  
-  
-    public HardWareUsageDAO(String EC2Number, TotalCpuDetail CPU, TotalMemDetail MEM, TotalDiskDetail DISK, List<TopProcessDetail> topRateProcess) {  
-        this.EC2Number = EC2Number;  
-        this.CPU = CPU;  
-        this.MEM = MEM;  
-        this.DISK = DISK;  
-        TopRateProcess = topRateProcess;  
-    }
+	private String EC2Number;  
+	private TotalCpuDetail CPU;  
+	private TotalMemDetail MEM;  
+	private TotalDiskDetail DISK;  
+	private List<TopProcessDetail> TopRateProcess;  
+	
+	public HardWareUsageDAO() {  
+		this.TopRateProcess = new ArrayList<TopProcessDetail>();  
+	}  
+	
+	public HardWareUsageDAO(String EC2Number, TotalCpuDetail CPU, TotalMemDetail MEM, TotalDiskDetail DISK, List<TopProcessDetail> topRateProcess) {  
+		this.EC2Number = EC2Number;  
+		this.CPU = CPU;  
+		this.MEM = MEM;  
+		this.DISK = DISK;  
+		TopRateProcess = topRateProcess;  
+	}
 ```
 
 두개의 다른점은 Serializable을 implements하느냐 마느냐의 차이였다.
@@ -132,8 +135,8 @@ public class TopProcessDetail implements Serializable{
 ```
 
 **객체는 기본적으로 직렬화 될 때 직렬화 도구마다 다를 수 있지만 JsonSerializer를 사용할 때 Json구조로 문자열화가 된다.**
-```
-TopProcessDetail은 
+```json
+// TopProcessDetail은 
 {
 COMMAND : OOO,
 CPUusage : OOO,
@@ -141,7 +144,7 @@ Time : OOO,
 Mem : OOO,
 State : OOO
 }
-이런식으로 넘어가게 될텐데 이를 직렬화 하게 되면
+// 이런식으로 넘어가게 될텐데 이를 직렬화 하게 되면
 b"{
 COMMAND : OOO,
 CPUusage : OOO,
@@ -149,7 +152,7 @@ Time : OOO,
 Mem : OOO,
 State : OOO
 }"
-요렇게 되게 되는 것이고 역직렬화를 해도 마찬가지이다.
+//요렇게 되게 되는 것이고 역직렬화를 해도 마찬가지이다.
 ```
 
 ~~중요한 부분은 아래 코드가 설정에 들어간다는 것인데 이 이야기는 코드를 조금더 까보면 알 수 있을 것 같다. 실제 JsonSerializer를 까보면 위에 ADD_TYPE_INFO_HEADERS값이 string으로 특정 Object인 것을 확인 할 수 있는데 KAFKA메시지에 TYPE을 추가하는 부분인거 같은데 잠시대기~~
@@ -179,4 +182,6 @@ public class HardWareUsageDAO implements Serializable
 ![[4. Publisher-4.png|600]]
 
 최근에 MQTT 프로젝트를 공부하면서 influxdb와 그라파나의 유용성을 한번 경험해 봤다.  한번 해보자!!!
--> 다음에서 계속 [[5. Database & logger]]
+
+
+->다음편[[5. Database & logger]]에서 계속
