--- a/content/5.Project/AWS HW monitoring/3. DATA Design.md
+++ b/content/5.Project/AWS HW monitoring/3. DATA Design.md
@@ -1,4 +1,3 @@
-링크
 [[1. Overview&IDEA]]
 [[2. Problem &  PoC]]
 [[3. DATA Design]]
@@ -20,48 +19,48 @@ top
 * #### top process를 실행시키고 1초마다 출력하게 하면서 cpu, memory, process의 정보를 가져온다.
 ```java
 try {  
-            lineNumber = 0;  
-            p = Runtime.getRuntime().exec("top -b -n 1");  
-            BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream()));  
-  
-            while ((temp = br.readLine()) != null) {  
-               if (lineNumber < 2) {  
-                  lineNumber++;  
-                  continue;               }  
-  
-  
-               String[] temp_str = temp.split("\\s+");  
-  
-               // PARSING  
-               if (lineNumber == 2) { // parsing CPU  
-                  System.out.println(Arrays.toString(temp_str));  
-                  if (containsString(List.of(temp_str),"100")) {  
-                     lineNumber++;  
-                     continue;                  }  
-                  cpuDetail = new TotalCpuDetail(Float.parseFloat(temp_str[1]), Float.parseFloat(temp_str[3]));  
+	lineNumber = 0;  
+	p = Runtime.getRuntime().exec("top -b -n 1");  
+	BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream()));  
+
+	while ((temp = br.readLine()) != null) {  
+	   if (lineNumber < 2) {  
+		  lineNumber++;  
+		  continue;               }  
+
+
+	   String[] temp_str = temp.split("\\s+");  
+
+	   // PARSING  
+	   if (lineNumber == 2) { // parsing CPU  
+		  System.out.println(Arrays.toString(temp_str));  
+		  if (containsString(List.of(temp_str),"100")) {  
+			 lineNumber++;  
+			 continue;                  }  
+		  cpuDetail = new TotalCpuDetail(Float.parseFloat(temp_str[1]), Float.parseFloat(temp_str[3]));  
 //                System.out.println(Arrays.toString(temp_str));  
 //                System.out.println(cpuDetail.toString());  
-  
-               } else if (lineNumber == 3) { // parsing PhysMem  
-                  memDetail = new TotalMemDetail(Float.parseFloat(temp_str[7]), Float.parseFloat(temp_str[5]));  
-  
-               } else if (lineNumber > 6) { // parsing ProcessDetail;  
-                  if (Float.parseFloat(temp_str[9]) >= 1.0 ) {  
-                     TopProcessDetail topProcessDetail = new TopProcessDetail(Integer.parseInt(temp_str[1]), temp_str[12], Float.parseFloat(temp_str[9]), temp_str[11], Float.parseFloat(temp_str[10]), temp_str[8]);  
-                     topRateProcess.add(topProcessDetail);  
-                  }  
-                    
-               }  
-  
-               lineNumber++;  
-  
-            }  
-  
-            p.waitFor();  
-            p.destroy();  
-         } catch (Exception e) {  
-            throw new RuntimeException(e);  
-         }	
+
+	   } else if (lineNumber == 3) { // parsing PhysMem  
+		  memDetail = new TotalMemDetail(Float.parseFloat(temp_str[7]), Float.parseFloat(temp_str[5]));  
+
+	   } else if (lineNumber > 6) { // parsing ProcessDetail;  
+		  if (Float.parseFloat(temp_str[9]) >= 1.0 ) {  
+			 TopProcessDetail topProcessDetail = new TopProcessDetail(Integer.parseInt(temp_str[1]), temp_str[12], Float.parseFloat(temp_str[9]), temp_str[11], Float.parseFloat(temp_str[10]), temp_str[8]);  
+			 topRateProcess.add(topProcessDetail);  
+		  }  
+			
+	   }  
+
+	   lineNumber++;  
+
+	}  
+
+	p.waitFor();  
+	p.destroy();  
+ } catch (Exception e) {  
+	throw new RuntimeException(e);  
+ }	
 ```
 * #### df라는 현재 디스크를 관리하는 창을 실행시키고 현재 disk정보를 가져오는 것이다. 
 ```java
@@ -122,5 +121,4 @@ java -jar {file}.jar
 여기까지 하는데 참 고생이 많았다!! 이제 producing할 정보를 잡아올 수 있게 된것이다.
 이제 KAFKA 세팅을 하고 이 정보들을 카프카에 넣는 과정 그리고 다시 시각화 하는 과정이 남았다!!!! 0.7/3정도 한거 같네!!!
 
--> 다음에서 계속
-[[4. Publisher|다음으로]]
+->다음편[[4. Publisher]]에서 계속
