--- a/content/5.Project/AWS HW monitoring/5. Database & logger.md
+++ b/content/5.Project/AWS HW monitoring/5. Database & logger.md
@@ -1,4 +1,3 @@
-링크
 [[1. Overview&IDEA]]
 [[2. Problem &  PoC]]
 [[3. DATA Design]]
@@ -37,10 +36,12 @@ Node3 /
 #### DB설치
 
 기본적으로 document에 나와있는 것을 기준으로 작업했다.
+
 https://www.influxdata.com/blog/getting-started-apache-kafka-influxdb/
 
 ##### 설치
 https://docs.influxdata.com/influxdb/v2/install/ 
+
 위에 url을 가지고 설치를 진행했는데 kafka로 단련된 나는 설치하는게 그리 어렵지 않았다.
 
 ```sh
@@ -147,9 +148,11 @@ telegraf.conf
 ### data_format
 
 우선은 url부터 보자면
+
 https://docs.influxdata.com/telegraf/v1/data_formats/input/json/
 https://github.com/tidwall/gjson/blob/v1.7.5/SYNTAX.md#path-structure
 https://github.com/influxdata/telegraf/tree/master/plugins/parsers/json_v2
+
 이거 3개를 같이 봐야한다.
 
 json을 어떻게 변환할 건지에 대해서 이야기하는 것들인데 GJSON이라는 프로토콜을 따르는 것같다. 이는 json구조에서 데이터의 path에 대해 정의해 놓은 부분이다.
@@ -180,6 +183,7 @@ json을 어떻게 변환할 건지에 대해서 이야기하는 것들인데 GJS
 
 중요한건 influxdb에는 measurment라는 key와 같은 역할을 하는 객체가 있는데 이를 설정해 주지 않으면 kafka-consumer로 기본설정을 하게 된다. 이렇게 되면 구분자가 사라지면서 이게 telegraf에서 온거든 kafka에서 온거든 다 똑같게 들어가므로 로그가 합쳐지게 되는 썩을 결과가 된다....
 ![[5. Database & logger-8.png|500]]
+
 해서 위에 3개의 url이 필요한 것이다. 
 내가 적용한 부분만 보면 아래와 같다.
 
@@ -243,4 +247,5 @@ telegraf --config _YOUR_HOME_DIRECTORY_/influxgarden_integration/telegraf.conf
 ```
 
 이제 Grafana 남았다!!!
--> 다음편에서 계속 
+
+->다음편[[6. Visualization]]에서 계속
