--- a/content/5.Project/AWS HW monitoring/7. ToBeContinue...?.md
+++ b/content/5.Project/AWS HW monitoring/7. ToBeContinue...?.md
@@ -1,4 +1,4 @@
-[[1. Overview&IDEA]]
+[[5.Project/AWS HW monitoring/1. Overview & IDEA]]
 [[2. Problem &  PoC]]
 [[3. DATA Design]]
 [[4. Publisher]]
