--- a/content/5.Project/AWS HW monitoring/4. Publisher.md
+++ b/content/5.Project/AWS HW monitoring/4. Publisher.md
@@ -1,4 +1,4 @@
-[[5.Project/AWS HW monitoring/1. Overview & IDEA]]
+[[1. Overview & IDEA - HW monitoring]]
 [[2. Problem &  PoC]]
 [[3. DATA Design]]
 [[4. Publisher]]
