--- a/content/5.Project/TFIDF PPT Searching/2. Extracting with PPT.md
+++ b/content/5.Project/TFIDF PPT Searching/2. Extracting with PPT.md
@@ -1,3 +1,11 @@
+[!abstract] 분명 말하지만 혼자 울면서 한 프로젝트입니다... 사수도 없고 뭐가 맞는지도 모르지만.. 생존을 위해, 또한 회사 코드가 아니라 집에와서 혼자 만든 코드들입니다...
+
+[[1. Overview & IDEA - PPT Searching]]
+[[2. Extracting with PPT]] 
+[[3. TF-IDF with PPT]] 
+[[4. Threading with PPT]] 
+[[5. Operating with PPT]] 
+
 ### PoC(Proof of Concept)
 
 조아써! 일딴 시작을 해보자
