--- a/content/5.Project/TFIDF PPT Searching/4. Threading with PPT.md
+++ b/content/5.Project/TFIDF PPT Searching/4. Threading with PPT.md
@@ -1,4 +1,4 @@
-> [!abstract] 분명 말하지만 혼자 울면서 한 프로젝트입니다... 사수도 없고 뭐가 맞는지도 모르지만.. 생존을 위해, 또한 회사 코드가 아니라 집에와서 혼자 만든 코드들입니다...
+> [!abstract] 울면서 한 프로젝트입니다... 사수도 없고 뭐가 맞는지도 모르지만.. 생존을 위해, 또한 회사 코드가 아니라 집에와서 혼자 만든 코드들입니다...
 
 [[1. Overview & IDEA - PPT Searching]]
 [[2. Extracting with PPT]] 
@@ -179,6 +179,7 @@ def folder2data_threading(any_folder_path):
 Thread수를 수정하면서 테스트해봤을 때 는 아래와 같다.
 
 ![[4. Threading with PPT-4.png|700]]
+ 
  분으로 환산한 값들을 적었고 ==당시에 걸렸던 시간을 어림잡아 다시 쓴 값==이다.
  Thread 1개 :퇴근하고 출근해도 안됨
  Thread 2개 :출근해서 돌리면 퇴근할 때 끝남
