--- a/content/5.Project/TFIDF PPT Searching/2. Extracting with PPT.md
+++ b/content/5.Project/TFIDF PPT Searching/2. Extracting with PPT.md
@@ -1,4 +1,4 @@
-> [!abstract] 분명 말하지만 혼자 울면서 한 프로젝트입니다... 사수도 없고 뭐가 맞는지도 모르지만.. 생존을 위해, 또한 회사 코드가 아니라 집에와서 혼자 만든 코드들입니다...
+> [!abstract] 혼자 울면서 한 프로젝트입니다... 사수도 없고 뭐가 맞는지도 모르지만.. 생존을 위해, 또한 회사 코드가 아니라 집에와서 혼자 만든 코드들입니다...
 
 [[1. Overview & IDEA - PPT Searching]]
 [[2. Extracting with PPT]] 
