--- a/content/1.Project/IoT데이터 수집기/1. Overview & Intro - MQTT.md
+++ b/content/1.Project/IoT데이터 수집기/1. Overview & Intro - MQTT.md
@@ -31,8 +31,7 @@ MQTT가 뭔지 알아?
 
 크게 3챕터가 될꺼같은데 좀 써보면
 1. [[MQTT - MQTT]]
-2. [[Application Security - Spring]]
-3. [[MQTT to Backend Architecture]]
+2. [[3. Application Security - Spring]]
 
 MQTT -MQTT는 해당 protocol에 대해서 이야기한다. MQTT가 protocol이라고 얘기를 했지만 그런거 아니고 MQTT는 MQTT다 라고 얘기하는 회로 설계 담당자의 울분을 담을 수 있다...
 
